# Connect-Four

./: .gitignore  AI.c  AI.h  CMakeLists.txt  Hashmap.c  Makefile  README.md  Stack.c  Stack.h  connect  connect.c  data.c  game-structures.h  game.c  game.h  hashmap.h  identifiers.h  menu.c  menu.h  save.txt  stack.h
.github/workflows/: main.yml
common/: data.c  data.h  functions.c  functions.h  types.h
structs/: Hashmap.c  Hashmap.h  Matrix.c  Matrix.h  Stack.c  Stack.h
